--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
-<head style="font-family:sans-serif;"> <title> Intro </title> </head>
+<head> <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+  <title> Intro </title> </head>
   <body>
   <p> Hello from Aurelija. Yes , it is me and this web site is only about me. </p>
   <p> In every site's page you will find more and different information about
