--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
-<! DOCTYPE>
-  <html>
+<!DOCTYPE>
+  <html> <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head> <title> Contact </title> </head>
   <body>
   <ol>
-    <il> Facebook <a href="https://www.facebook.com/simukaityte"> </il>
-    <il> Instagram <a href="http://instagram.com/aurelijasimukaityte/" > </il>
-    <il> Youtube < a href="https://www.youtube.com/user/asimuka"> </il>
+    <il>  <a href="https://www.facebook.com/simukaityte">Facebook </a> </il>
+    <il> <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></il>
+    <il>  <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </il>
     <il> Or in simple way right me an e-mail: a.simukaityte@gmail.com
     </ol>
     <p> Cannot wait to contact you! </p>
+    <div> <a href="home.html"> Back to Home </a> </div>
   </body>
   </html>
