--- a/hobby.html
+++ b/hobby.html
@@ -1,5 +1,6 @@
 <!DOCTYPE>
 <html>
+<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <head> <title> Times when I am free </title> </head>
     <body>
 
@@ -7,4 +8,12 @@
       <ul>
         <li> Reading books. </li>
         <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it (Well if book isn't intresting it is mission impossible to me). First, I  was reading everything like addicted, but after sometime I found that some of them are really bad quality. Now my mission is to read books that could help me in the future. </p>
-        <li> 
+        <li> Bicycling </li>
+        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there every day and journey to one side takes about 20 minutes by bicycle. When the first time you feel that spring is coming I start preparing my bike for new journeys. </p>
+        <li> Watching TV series </li>
+        <p> Most people enjoy watching movie, but for me movie is too short and has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p>
+        <div> <a href="hobby.html"> About my Hobbies </a> </div>
+        <div> <a href="contact.html"> Contact me </a> </div>
+        <div> <a href="home.html"> Back to Home </a> </div>
+      </body>
+      </html>
