--- a/me.html
+++ b/me.html
@@ -1,8 +1,12 @@
 <!Doctype>
 <html>
+<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head> <title> ME! </title> </head>
   <body>
   <p> I'm Lithuanian girl and now I'm studying at LCC international university (class of 2018!). Before I studied at Lithuanian Educational Science University and my major was chemistry. </p>
   <p> At the time I am living again in my hometown city - Kretinga. My dream now is to move somewhere else and I hope my wish would come true. </p>
+  <div> <a  href="hobby.html"> About Hobbies </a> </div>
+  <div> <a href="contact.html"> Contact Me </a> </div>
+  <div> <a href="home.html"> Back to Home </a> </div>
   </body>
   </html>
