--- a/home.html
+++ b/home.html
@@ -1,11 +1,16 @@
 <!DOCTYPE>
 <html>
-<head> <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<head>
   <title> Intro </title> </head>
   <body>
+    <h1> Introduction </h1>
   <p> Hello from Aurelija. Yes , it is me and this web site is only about me. </p>
   <p> In every site's page you will find more and different information about
     me my interestes and other stuff. </p>
     <p> Make a cup of tea or coffee and let's start journey! </p>
+    <ol> <il> <div href="me.html"> About Me </div> </il>
+      <il> <div href="hobby.html"> Hobby </div> </il>
+      <il> <div href="contact.html"> Contact </div> </il>
     </body>
     </html>
