--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
   <head> <title> Contact </title> </head>
   <body>
   <ol>
-    <il>  <a href="https://www.facebook.com/simukaityte">Facebook </a> </il>
-    <il> <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></il>
-    <il>  <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </il>
+    <il> <div> <a href="https://www.facebook.com/simukaityte">Facebook </a> </il>
+    <il> <div> <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></il>
+    <il> <div> <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </il>
     <il> Or in simple way right me an e-mail: a.simukaityte@gmail.com
     </ol>
-    <p> Cannot wait to contact you! </p>
+    <p> <div> Cannot wait to contact you! </p>
     <div> <a href="home.html"> Back to Home </a> </div>
   </body>
   </html>
