--- a/home.html
+++ b/home.html
@@ -9,8 +9,8 @@
   <p> In every site's page you will find more and different information about
     me my interestes and other stuff. </p>
     <p> Make a cup of tea or coffee and let's start journey! </p>
-    <ol> <il> <div href="me.html"> About Me </div> </il>
-      <il> <div href="hobby.html"> Hobby </div> </il>
-      <il> <div href="contact.html"> Contact </div> </il>
+    <ol> <il> <div> <a href="me.html"> About Me </a> </il>
+      <il> <div> <a href="hobby.html"> Hobby </a> </il>
+      <il> <div> <a href="contact.html"> Contact </a> </il>
     </body>
     </html>
