--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,7 @@
 <!DOCTYPE>
-  <html> <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+  <html>
+  <div>
+  <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head> <title> Contact </title> </head>
   <body>
   <ol>
@@ -9,6 +11,9 @@
     <il> Or in simple way right me an e-mail: a.simukaityte@gmail.com
     </ol>
     <p> <div> Cannot wait to contact you! </p>
-    <div> <a href="home.html"> Back to Home </a> </div>
+    <div> <a href="index.html"> Back to Home </a> </div>
+    <div> <a href="hobby.html"> My Hobbies </a> </div>
+    <div> <a href="me.html"> About ME! </a> </div>
   </body>
+</div>
   </html>
