--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE>
 <html>
+<div>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <head>
   <title> Intro </title> </head>
@@ -13,4 +14,5 @@
       <il> <div> <a href="hobby.html"> Hobby </a> </il>
       <il> <div> <a href="contact.html"> Contact </a> </il>
     </body>
+  </div>
     </html>
