--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE>
-  <html>
-  <div>
+  <html id="all">
   <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-  <head> <title> Contact </title> </head>
+  <head>
+    <title> Contact </title> </head>
   <body>
+    <h1> Contacts </h1>
   <ol>
     <il> <div> <a href="https://www.facebook.com/simukaityte">Facebook </a> </il>
     <il> <div> <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></il>
