--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
-<html>
-<div>
+<html id="all">
+
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <head>
   <title> Intro </title> </head>
@@ -14,5 +14,5 @@
       <il> <div> <a href="hobby.html"> Hobby </a> </il>
       <il> <div> <a href="contact.html"> Contact </a> </il>
     </body>
-  </div>
+  
     </html>
