--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,21 @@
 <!DOCTYPE>
-  <html id="all">
+  <html>
   <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head>
     <title> Contact </title> </head>
   <body>
+    <div id="all">
     <h1> Contacts </h1>
-  <ol>
-    <il> <div> <a href="https://www.facebook.com/simukaityte">Facebook </a> </il>
-    <il> <div> <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></il>
-    <il> <div> <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </il>
+  <oul>
+    <li>  <a href="https://www.facebook.com/simukaityte">Facebook </a> </li>
+    <li>  <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></li>
+    <li>  <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </li>
     <il> Or in simple way right me an e-mail: a.simukaityte@gmail.com
-    </ol>
-    <p> <div> Cannot wait to contact you! </p>
+    </ul>
+    <p> Cannot wait to contact you! </p>
     <div> <a href="index.html"> Back to Home </a> </div>
     <div> <a href="hobby.html"> My Hobbies </a> </div>
     <div> <a href="me.html"> About ME! </a> </div>
+  </div>
   </body>
-</div>
   </html>
