--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE>
-<html id="all">
-
+<html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <head>
   <title> Intro </title> </head>
   <body>
+    <div id="all">
     <h1> Introduction </h1>
   <p> Hello from Aurelija. Yes , it is me and this web site is only about me. </p>
   <p> In every site's page you will find more and different information about
     me my interestes and other stuff. </p>
     <p> Make a cup of tea or coffee and let's start journey! </p>
-    <ol> <il> <div> <a href="me.html"> About Me </a> </il>
-      <il> <div> <a href="hobby.html"> Hobby </a> </il>
-      <il> <div> <a href="contact.html"> Contact </a> </il>
+    <ul> <li> <a href="me.html"> About Me </a> </li>
+        <li> <a href="hobby.html"> Hobby </a> </li>
+        <li> <a href="contact.html"> Contact </a> </li></ul>
+      </div>
     </body>
-  
-    </html>
+</html>
