--- a/hobby.html
+++ b/hobby.html
@@ -1,21 +1,22 @@
 <!DOCTYPE>
-<html id="all">
-
+<html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <head>
   <title> Times when I am free </title> </head>
     <body>
+      <div id="all">
 <h1> Times when I am frew </h1>
       <p> When I have free time for only myself my favorite activities to do is: </p>
-      <ul><div>
+      <ul>
         <li> Reading books. </li>
-        <p><div> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it </p>
+        <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it </p>
         <li> Bicycling </li>
-        <p> <div>I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there every day and journey to one side takes about 20 minutes by bicycle.  </p>
+        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there every day and journey to one side takes about 20 minutes by bicycle.  </p>
         <li> Watching TV series </li>
-        <p> <div>Most people enjoy watching movie, but for me movie is too short and has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p>
+        <p> Most people enjoy watching movie, but for me movie is too short and has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p>
         <div> <a href="me.html"> About my Hobbies </a> </div>
         <div> <a href="contact.html"> Contact me </a> </div>
         <div> <a href="index.html"> Back to Home </a> </div>
+      </div>
       </body>
       </html>
