--- a/me.html
+++ b/me.html
@@ -1,13 +1,15 @@
 <!Doctype>
-<html id="all">
+<html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head> <title> ME! </title> </head>
   <body>
+    <div id="all">
     <h1> Me! </h1>
   <p> I'm Lithuanian girl and now I'm studying at LCC international university (class of 2018!). Before I studied at Lithuanian Educational Science University and my major was chemistry. </p>
   <p> At the time I am living again in my hometown city - Kretinga. My dream now is to move somewhere else and I hope my wish would come true. </p>
   <div> <a  href="hobby.html"> About Hobbies </a> </div>
   <div> <a href="contact.html"> Contact Me </a> </div>
   <div> <a href="home.html"> Back to Home </a> </div>
+</div>
   </body>
   </html>
