--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,12 @@
   <body>
     <div id="all">
     <h1> Contacts </h1>
-  <oul>
+  <ul>
     <li>  <a href="https://www.facebook.com/simukaityte">Facebook </a> </li>
     <li>  <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></li>
     <li>  <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </li>
-    <il> Or in simple way right me an e-mail: a.simukaityte@gmail.com
-    </ul>
+    <li> Or in simple way right me an e-mail: a.simukaityte@gmail.com <img src="typewriter.jpg" style="width:120px;height:80px"> </li>
+  </ul>
     <p> Cannot wait to contact you! </p>
     <div> <a href="index.html"> Back to Home </a> </div>
     <div> <a href="hobby.html"> My Hobbies </a> </div>
