--- a/me.html
+++ b/me.html
@@ -6,7 +6,7 @@
     <div id="all">
     <h1> Me! </h1>
   <p> I'm Lithuanian girl and now I'm studying at LCC international university (class of 2018!). Before I studied at Lithuanian Educational Science University and my major was chemistry. </p>
-  <p> At the time I am living again in my hometown city - Kretinga. My dream now is to move somewhere else and I hope my wish would come true. </p>
+  <p> At the time I am living again in my hometown city - Kretinga. My dream now is to move somewhere else and I hope my wish would come true. <img src="ox.jpg" style="width:100px;height:60px"></p>
   <div> <a  href="hobby.html"> About Hobbies </a> </div>
   <div> <a href="contact.html"> Contact Me </a> </div>
   <div> <a href="home.html"> Back to Home </a> </div>
