--- a/hobby.html
+++ b/hobby.html
@@ -9,11 +9,12 @@
       <p> When I have free time for only myself my favorite activities to do is: </p>
       <ul>
         <li> Reading books. </li>
-        <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it <img src="books.jpg" style="width:80px;height:100px"> </p>
+        <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </p><img src="books.jpg" style="width:80px;height:100px">
         <li> Bicycling </li>
-        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day. <img src="cycle.jpg" style="width:60px;height:80px">  </p>
+        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.
+        </p><img src="cycle.jpg" style="width:60px;height:80px">
         <li> Watching TV series </li>
-        <p> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. <img src="tv.jpg" style="width:80px;height:60px"></p>
+        <p> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p><img src="tv.jpg" style="width:80px;height:60px">
         <div> <a href="me.html"> About my Hobbies </a> </div>
         <div> <a href="contact.html"> Contact me </a> </div>
         <div> <a href="index.html"> Back to Home </a> </div>
