--- a/hobby.html
+++ b/hobby.html
@@ -9,7 +9,7 @@
       <p> When I have free time for only myself my favorite activities to do is: </p>
       <ul>
         <li> Reading books. </li>
-        <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </p><img src="books.jpg" style="width:80px;height:100px">
+        <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </p>
         <li> Bicycling </li>
         <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.
         </p><img src="cycle.jpg" style="width:60px;height:80px">
