--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <li>  <a href="https://www.facebook.com/simukaityte">Facebook </a> </li>
     <li>  <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></li>
     <li>  <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </li>
-    <li> Or in simple way right me an e-mail: a.simukaityte@gmail.com <img src="typewriter.jpg" style="width:120px;height:80px"> </li>
+    <li> Or in simple way right me an e-mail: a.simukaityte@gmail.com </li> <a> <img src="typewriter.jpg" style="width:120px;height:80px"> </a>
   </ul>
     <p> Cannot wait to contact you! </p>
     <div> <a href="index.html"> Back to Home </a> </div>
