--- a/hobby.html
+++ b/hobby.html
@@ -11,10 +11,11 @@
         <li> Reading books. </li>
         <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </p>
         <li> Bicycling </li>
-        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.
-        </p><img src="cycle.jpg" style="width:60px;height:80px">
+        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.</p>
+        <a><img src="cycle.jpg" style="width:80px;height:100px"> </a>
         <li> Watching TV series </li>
-        <p> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p><img src="tv.jpg" style="width:80px;height:60px">
+        <p> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p>
+        <a><img src="tv.jpg" style="width:80px;height:60px"></a>
         <div> <a href="me.html"> About my Hobbies </a> </div>
         <div> <a href="contact.html"> Contact me </a> </div>
         <div> <a href="index.html"> Back to Home </a> </div>
