--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <p> Hello from Aurelija. Yes , it is me and this web site
      is only about me. </p>
   <p> In every site's page you will find more and different information about
-    me my interestes and other stuff. <img src="me.jpg" style="width:100px;height:128px"></p>
+    me my interestes and other stuff.</p>
+    <p> <img src="me.jpg" style="width:100px;height:128px;float:right"></p>
     <p> Make a cup of tea or coffee and let's start journey! </p>
     <ul> <li> <a href="me.html"> About Me </a> </li>
         <li> <a href="hobby.html"> Hobby </a> </li>
