--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
   <html>
   <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head>
-    <title> Contact </title> </head>
+    <title> Contact </title>
+    </head>
   <body>
     <div id="all">
     <h1> Contacts </h1>
