--- a/hobby.html
+++ b/hobby.html
@@ -5,16 +5,16 @@
   <title> Times when I am free </title> </head>
     <body>
       <div id="all">
-<h1> Times when I am frew </h1>
+<h1> Times when I am free </h1>
       <p> When I have free time for only myself my favorite activities to do is: </p>
       <ul>
         <li> Reading books. </li>
-        <p> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </p>
+        <a> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </a>
         <li> Bicycling </li>
-        <p> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.</p>
+        <a> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.</a>
         <a><img src="cycle.jpg" style="width:80px;height:100px"> </a>
         <li> Watching TV series </li>
-        <p> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </p>
+        <a> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </a>
         <a><img src="tv.jpg" style="width:80px;height:60px"></a>
         <div> <a href="me.html"> About my Hobbies </a> </div>
         <div> <a href="contact.html"> Contact me </a> </div>
