--- a/hobby.html
+++ b/hobby.html
@@ -6,13 +6,13 @@
     <body>
       <div id="all">
 <h1> Times when I am free </h1>
-      <p> When I have free time for only myself my favorite activities to do is: </p>
+      <a> When I have free time for only myself my favorite activities to do is: </a>
       <ul>
         <li> Reading books. </li>
         <a> My passion is books. No matter it is hard-cover, paper-cover or e-book I will read it  </a>
         <li> Bicycling </li>
         <a> I love to ride with bicycle. Because I live near Palanga, Lithuanian summer capital, I can go there by bike every day.</a>
-  
+
         <li> Watching TV series </li>
         <a> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </a>
         <a><img src="tv.jpg" style="width:80px;height:60px"></a>
