--- a/hobby.html
+++ b/hobby.html
@@ -15,7 +15,7 @@
 
         <li> Watching TV series </li>
         <a> Most people enjoy watching movie, but for me movie has not any sequence like TV series. I really like to wait what my beloved characters going to investigate next week. </a>
-        <a><img src="tv.jpg" style="width:80px;height:60px"></a>
+        <a><img src="tv.jpg" style="width:80px;height:60px;float:right"></a>
         <div> <a href="me.html"> About my Hobbies </a> </div>
         <div> <a href="contact.html"> Contact me </a> </div>
         <div> <a href="index.html"> Back to Home </a> </div>
