--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <li>  <a href="https://www.facebook.com/simukaityte">Facebook </a> </li>
     <li>  <a href="http://instagram.com/aurelijasimukaityte/" > Instagram </a></li>
     <li>  <a href="https://www.youtube.com/user/asimuka"> Youtube </a> </li>
-    <li> Or in simple way right me an e-mail: a.simukaityte@gmail.com </li> <a> <img src="typewriter.jpg" style="width:180px;height:120px"> </a>
+    <li> Or in simple way right me an e-mail:<span color="#004C80"> a.simukaityte@gmail.com</span> </li> <a> <img src="typewriter.jpg" style="width:180px;height:120px"> </a>
   </ul>
     <p> Cannot wait to contact you! </p>
     <div> <a href="index.html"> Back to Home </a> </div>
