--- a/me.html
+++ b/me.html
@@ -1,4 +1,4 @@
-<!Doctype>
+<!DOCTYPE>
 <html>
 <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
   <head> <title> ME! </title> </head>
